# ha-awox-ble

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml
custom_components/awox_plug/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  protocol.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/awox_plug/translations/: en.json
tests/: conftest.py  test_protocol.py
