[project]
name = "ha-awox-ble"
version = "1.3.0"
description = "Home Assistant integration for AwoX / Revogi Bluetooth smart plugs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
